--- a/misas-thai-street-cuisine-2.0/Components/MenuModal.razor.css
+++ b/misas-thai-street-cuisine-2.0/Components/MenuModal.razor.css
@@ -138,6 +138,7 @@
 }
 .menu-modal-title {
     font-size: 2.2rem;
+    font-family: 'Rock Salt', cursive;
     font-weight: bold;
     color: #222;
     margin-bottom: 0.2rem;
