--- a/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor
+++ b/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor
@@ -13,7 +13,7 @@
             <div class="cart-menu-desc">@MenuItem.Description</div>
             @if (MenuItem is Platter platter)
             {
-                <div class="menu-item-includes">
+                @* <div class="menu-item-includes">
                     <span style="font-weight:bold;">Starting from </span>
                     @if (platter.Includes != null && platter.Includes.Count > 0)
                     {
@@ -29,7 +29,7 @@
                             <li>@addon</li>
                         }
                     </ul>
-                }
+                } *@
                 <div class="cart-menu-cart-section">
                     @foreach (var serve in platter.Serves)
                     {
