Comment out menu-info section in Home.razor and update scrollToMenuInfo function in site.js for improved functionality

--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -30,9 +30,9 @@
 
 <DeliveryArea />
 
-<div id="menu-info">
+@* <div id="menu-info">
     <MenuInfo />
-</div>
+</div> *@
 
 @code {
     [Inject] private IJSRuntime JS { get; set; } = default!;
