--- a/misas-thai-street-cuisine-2.0/Pages/ShoppingCart.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/ShoppingCart.razor
@@ -7,6 +7,7 @@
 @inject ShoppingCartService Cart
 @inject misas_thai_street_cuisine_2._0.Services.OrderContextService OrderContext
 @inject NavigationManager NavigationManager
+@inject IJSRuntime JS
 
 <PageTitle>Shopping Cart</PageTitle>
 
@@ -59,6 +60,7 @@
 
     private void OnFinishUpClicked()
     {
-        NavigationManager.NavigateTo("/FinalizeOrder");
+        JS.InvokeVoidAsync("alert", "Not currently accepting orders");
+        @* NavigationManager.NavigateTo("/FinalizeOrder"); *@
     }
 }
